# computercraft-rs

./: Cargo.toml  README.md  flake.nix  slave.lua
examples/: monitor.rs  printer.rs  testing.rs
lua/: example_config.json  worker.lua
lua/worker/: config.lua  controller.lua  serialize.lua
scripts/: init_craftos.sh
slave/: controller.lua
src/: computer.rs  error.rs  lib.rs  peripheral.rs  request.rs  response.rs  socket.rs
src/protocol/: mod.rs
src/wrappers/: lua_compat.rs  mod.rs  monitor.rs  printer.rs
src/wrappers/ap/: colony_integrator.rs  mod.rs  rs_bridge.rs
src/wrappers/ap/colony_integrator/: citizen.rs  request.rs  visitor.rs
src/wrappers/ap/rs_bridge/: filter.rs  item.rs  pattern.rs
src/wrappers/monitor/: monitor_scale.rs
src/wrappers/shared/: color.rs
