[package]
name = "computercraft"
version = "0.3.1"
authors = ["Campbell M. Cole <pslightjs@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "computercraft"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.73"
futures-util = "0.3.28"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
thiserror = "1.0.46"
tokio = { version = "1.31.0", features = ["full"] }
tokio-tungstenite = "0.20.0"
tracing = "0.1.37"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
erased-serde = "0.3.29"

fastnbt = { version = "2", optional = true }
eyre = { version = "0.6.8", optional = true }
serde_path_to_error = { version = "0.1.14", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
computercraft = { path = ".", features = ["full"] }

[features]
default = ["native-tls", "peripheral-wrappers", "debug"]

debug = ["dep:eyre", "dep:serde_path_to_error"]

native-tls = ["tokio-tungstenite/native-tls"]
rustls = ["tokio-tungstenite/rustls"]

peripheral-wrappers = []
advanced-peripherals = ["peripheral-wrappers"]
create-crafts-and-additions = ["peripheral-wrappers"]

fastnbt = ["dep:fastnbt"]

full = ["advanced-peripherals", "create-crafts-and-additions", "fastnbt"]
